perf👌: 优化本地编译代码， 使其更合理

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,14 @@
     "[markdown]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
-    }
+    },
+    "python.testing.pytestArgs": [
+        "."
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
+    "cSpell.words": [
+        "Avalonia",
+        "maafw"
+    ]
 }
