config🔧: vscode setting - 添加推荐扩展与 spell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,8 @@
     "python.testing.pytestEnabled": true,
     "cSpell.words": [
         "Avalonia",
-        "maafw"
+        "maafw",
+        "venv",
+        "vuepress"
     ]
 }
