--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,53 +1,54 @@
 {
-    "json.schemas": [
-        {
-            "fileMatch": [
-                "/assets/resource/**/*.json",
-                "/install/resource/**/*.json",
-                "/assets/resource/**/*.jsonc",
-                "/install/resource/**/*.jsonc"
-            ],
-            "url": "/deps/tools/pipeline.schema.json"
-        },
-        {
-            "fileMatch": [
-                "/assets/interface.json",
-                "/install/interface.json"
-            ],
-            "url": "/deps/tools/interface.schema.json"
-        },
-        {
-            "fileMatch": [
-                "/install/config/maa_pi_config.json"
-            ],
-            "url": "/deps/tools/interface_config.schema.json"
-        }
-    ],
-    "files.associations": {
-        "**/assets/**/*.json": "jsonc"
-    },
-    "[json][jsonc]": {
-        "editor.formatOnSave": true,
-        "editor.insertSpaces": true,
-        "editor.tabSize": 4,
-        "editor.indentSize": "tabSize"
-    },
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter"
-    },
-    "[markdown]": {
-        "editor.formatOnSave": true,
-        "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
-    },
-    "python.testing.pytestArgs": [
-        "."
-    ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "cSpell.words": [
-        "Avalonia",
-        "maafw",
-        "venv",
-        "vuepress"
-    ]
+	"json.schemas": [
+		{
+			"fileMatch": [
+				"/assets/resource/**/*.json",
+				"/install/resource/**/*.json",
+				"/assets/resource/**/*.jsonc",
+				"/install/resource/**/*.jsonc"
+			],
+			"url": "/deps/tools/pipeline.schema.json"
+		},
+		{
+			"fileMatch": [
+				"/assets/interface.json",
+				"/install/interface.json"
+			],
+			"url": "/deps/tools/interface.schema.json"
+		},
+		{
+			"fileMatch": [
+				"/install/config/maa_pi_config.json"
+			],
+			"url": "/deps/tools/interface_config.schema.json"
+		}
+	],
+	"files.associations": {
+		"**/assets/**/*.json": "jsonc"
+	},
+	"[json][jsonc]": {
+		"editor.formatOnSave": true,
+		"editor.insertSpaces": true,
+		"editor.tabSize": 4,
+		"editor.indentSize": "tabSize"
+	},
+	"[python]": {
+		"editor.defaultFormatter": "ms-python.black-formatter"
+	},
+	"[markdown]": {
+		"editor.formatOnSave": true,
+		"editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
+	},
+	"python.testing.pytestArgs": [
+		"."
+	],
+	"python.testing.unittestEnabled": false,
+	"python.testing.pytestEnabled": true,
+	"cSpell.words": [
+		"Avalonia",
+		"maafw",
+		"qiniu",
+		"venv",
+		"vuepress"
+	]
 }
