developing 🚧 : 离线安装依赖

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,8 +46,11 @@
 	"python.testing.pytestEnabled": true,
 	"cSpell.words": [
 		"Avalonia",
+		"bilibili",
 		"maafw",
+		"pyproject",
 		"qiniu",
+		"tzdata",
 		"venv",
 		"vuepress"
 	]
