--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = {text = "LGPL-3.0"}
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "loguru>=0.7.3",
     "maafw>=4.5.5",
     "pre-commit>=4.3.0",
     "toml>=0.10.2",
