config🔧: 调整格式化配置 - Markdown忽略归档目录, 扩大单行长度限制 - jsonc去掉末尾逗号

--- a/.prettierrc
+++ b/.prettierrc
@@ -41,6 +41,13 @@
             "options": {
                 "multilineArraysWrapThreshold": 1
             }
+        },
+        {
+            "files": ["*.jsonc"],
+            "options": {
+                "parser": "jsonc",
+                "trailingComma": "none"
+            }
         }
     ]
 }
