config🔧: actions添加对prerelease的识别

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -37,17 +37,27 @@ jobs:
             fi
             tag=$(date "+$tag-%y%m%d-$(git rev-parse --short HEAD)")
           fi
+
+          # 判断是否为预发布版本（包含 -alpha, -beta, -rc 等标识）
+          is_prerelease=false
+          if [[ $tag =~ -alpha|-beta|-rc|-ci ]]; then
+            is_prerelease=true
+          fi
+
           if ! $($is_release) ; then
             prefix=${tag%-*-*}
             suffix=${tag#$prefix-}
             tag="$prefix-ci.$suffix"
+            is_prerelease=true
           fi
 
           echo tag=$tag | tee -a $GITHUB_OUTPUT
           echo is_release=$is_release | tee -a $GITHUB_OUTPUT
+          echo is_prerelease=$is_prerelease | tee -a $GITHUB_OUTPUT
     outputs:
       tag: ${{ steps.set_tag.outputs.tag }}
       is_release: ${{ steps.set_tag.outputs.is_release }}
+      is_prerelease: ${{ steps.set_tag.outputs.is_prerelease }}
 
   install:
     needs: meta
@@ -148,7 +158,7 @@ jobs:
           for f in *; do
             (cd $f && zip -r ../$f-${{ needs.meta.outputs.tag }}.zip .)
           done
-          
+
       - uses: softprops/action-gh-release@v2
         with:
           files: assets/*
