--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,9 @@
         "esbenp.prettier-vscode",
         "github.vscode-github-actions",
         "ms-vscode.vscode-github-issue-notebooks",
-        "github.vscode-pull-request-github"
+        "github.vscode-pull-request-github",
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-python.debugpy"
     ]
 }
