--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,7 +18,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  resource:
+  resource_check:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -33,4 +33,4 @@ jobs:
 
       - name: Check Resource
         run: |
-            python ./check_resource.py ./assets/resource/base/ 
+            python scripts/check_resource.py ./assets/resource/base/ 
