--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "loguru>=0.7.3",
     "maafw>=4.5.5",
     "pre-commit>=4.3.0",
+    "rapidfuzz>=3.14.3",
     "toml>=0.10.2",
     "tzdata>=2025.2",
 ]
