fix🐛: 尝试修复 actions 运行时的 loguru 报错(#9)

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -147,7 +147,9 @@ jobs:
 
       - name: Install
         shell: bash
+        # 需要先安装 loguru, 否则 install.py 里面的 logger 会报错
         run: |
+          pip install loguru
           python scripts/install.py ${{ needs.meta.outputs.tag }} ${{ matrix.os }} ${{ matrix.arch }}
 
           if [[ "${{ matrix.os }}" != "android" ]]; then
