fix🐛: 尝试修复 Actions 找不到脚本的问题(#9)

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -66,6 +66,8 @@ jobs:
         with:
           python-version: '3.13'
 
+      - uses: actions/checkout@v4
+
       - name: Download wheels
         working-directory: ${{ github.workspace }}
         shell: pwsh
