--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "MaaStarResonance"
-version = "0.1.0"
+version = "0.3.0"
 description = "基于MAAFW的星痕共鸣黑盒测试工具"
 authors = [
-    {name = "233Official",email = "ayusummer233@vip.qq.com"}
+    {name = "233Official",email = "ayusummer233@outlook.com"},
 ]
 license = {text = "LGPL-3.0"}
 readme = "README.md"
