--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -134,7 +134,7 @@ jobs:
           path: |
             resource/embeddable_python_zip
             resource/get-pip.py
-          key: resource_embeddable_python_zip
+          key: resource-cache-${{ matrix.os }}-${{ matrix.arch }}-v0.3.0
 
       # 下载不同系统的 embeddable python zip 包放在 ./resource/embeddable_python_zip 目录下
       - name: Download embeddable Python
