--- a/.github/workflows/mirrorchyan.yml
+++ b/.github/workflows/mirrorchyan.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: MirrorChyan/uploading-action@v1
         with:
           filetype: latest-release
-          filename: "MaaStarResonance-${{ matrix.os }}-${{matrix.arch}}.*"
+          filename: "MaaStarResonance-${{ matrix.os }}-${{matrix.arch}}*"
           mirrorchyan_rid: MaaStarResonance
 
           owner: 233Official
@@ -23,4 +23,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           upload_token: ${{ secrets.MirrorChyanUploadToken }}
           os: ${{ matrix.os }}
+
           arch: ${{ matrix.arch }}
