config🔧: 添加建议扩展并配置basic pylance

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,9 +8,10 @@
         "github.vscode-github-actions",
         "ms-vscode.vscode-github-issue-notebooks",
         "github.vscode-pull-request-github",
-        "ms-python.python",
         "ms-python.vscode-pylance",
         "ms-python.debugpy",
-        "uvdream.git-commit-lint-vscode"
+        "uvdream.git-commit-lint-vscode",
+        "seatonjiang.gitmoji-vscode",
+        "ms-python.isort"
     ]
 }
