fix🐛: 修改CI中Tera不支持的空格错误

--- a/.github/cliff.toml
+++ b/.github/cliff.toml
@@ -28,7 +28,7 @@ body = """
         {%- endif %}
         {% set extra_lines = commit.message | split(pat="\n") | slice(start=1) %}
         {% if extra_lines | length > 0 %}
-          {{ extra_lines | join(sep="\n") | indent(6) }}
+          {{ extra_lines | join(sep="\n      ") }}
         {% endif %}
 {% endmacro -%}
 
