--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,14 @@ dependencies = [
 
 [tool.setuptools]
 packages = ["agent"]
+
+[tool.isort]
+src_paths = ["agent", "scropts"]
+force_single_line = false
+multi_line_output = 0
+include_trailing_comma = false
+ensure_newline_before_comments = true
+line_length = 120
+combine_as_imports = true
+lines_between_sections = 1
+sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY"]
