--- a/.github/workflows/mirrorchyan.yml
+++ b/.github/workflows/mirrorchyan.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [win, macos, linux]
+        os: [win]
         arch: [aarch64, x86_64]
     steps:
       - uses: MirrorChyan/uploading-action@v1
