--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -119,7 +119,9 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: SweetSmellFox/MFAAvalonia
+          ref: ${{ needs.meta.outputs.tag }}
           path: MFA-src
+          fetch-depth: 1
 
       # 替换图标文件
       - name: Replace MFAAvalonia icon
