--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -114,12 +114,26 @@ jobs:
           out-file-path: "deps"
           extract: true
 
+      # 获取 MFAAvalonia 最新的 tag
+      - name: Get latest MFAAvalonia tag
+        id: get_mfa_tag
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const res = await github.rest.repos.listTags({
+              owner: 'SweetSmellFox',
+              repo: 'MFAAvalonia',
+              per_page: 1
+            });
+            console.log('Latest MFAAvalonia tag result:', res);
+            core.setOutput('tag', res.data[0].name);
+
       # 下载 MFAAvalonia 源码
       - name: Checkout MFAAvalonia source
         uses: actions/checkout@v5
         with:
           repository: SweetSmellFox/MFAAvalonia
-          ref: ${{ needs.meta.outputs.tag }}
+          ref: ${{ steps.get_mfa_tag.outputs.tag }}
           path: MFA-src
           fetch-depth: 1
 
