--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -114,7 +114,7 @@ jobs:
           out-file-path: "deps"
           extract: true
 
-      # 获取 MFAAvalonia 最新的 tag
+      # 获取 MFAAvalonia 最新的 tag | 过滤beta版本的tag
       - name: Get latest MFAAvalonia tag
         id: get_mfa_tag
         uses: actions/github-script@v7
@@ -123,10 +123,21 @@ jobs:
             const res = await github.rest.repos.listTags({
               owner: 'SweetSmellFox',
               repo: 'MFAAvalonia',
-              per_page: 1
+              per_page: 20
             });
-            console.log('Latest MFAAvalonia tag result:', res);
-            core.setOutput('tag', res.data[0].name);
+
+            const filteredTags = res.data
+              .map(t => t.name)
+              .filter(name => !name.toLowerCase().includes('beta'));
+
+            if (filteredTags.length === 0) {
+              core.setFailed('获取MFAA不到任何非beta版本的TAG');
+              return;
+            }
+
+            const latestTag = filteredTags[0];
+            console.log('最新的MFAA正式版tag为：', latestTag);
+            core.setOutput('tag', latestTag);
 
       # 下载 MFAAvalonia 源码
       - name: Checkout MFAAvalonia source
