--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "loguru>=0.7.3",
-    "maafw>=5.1.0",
+    "maafw>=5.1.3",
     "pip>=25.3",
     "pre-commit>=4.5.0",
     "rapidfuzz>=3.14.3",
@@ -18,9 +18,20 @@ dependencies = [
     "tzdata>=2025.2",
 ]
 
-[tool.setuptools]
-packages = ["agent"]
+# 自动扫描 agent 下所有包
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["agent*"]
 
+# 打包 agent 下所有类型的文件
+[tool.setuptools.package-data]
+agent = ["**/*"]
+
+# 打包包含数据包
+[tool.setuptools]
+include-package-data = true
+
+# isort检查工具配置
 [tool.isort]
 src_paths = ["agent", "scropts"]
 force_single_line = false
