perf👌: 优化 Release Info 解析(#48)

--- a/.github/cliff.toml
+++ b/.github/cliff.toml
@@ -83,10 +83,18 @@ commit_parsers = [
     { message = "^perf", group = "<!-- 3 -->🚀 性能优化" },
     { message = "^refactor", group = "<!-- 2 -->🚜 代码重构" },
     { message = "^style", group = "<!-- 5 -->🎨 样式" },
+    { message = "^format", group = "<!-- 5 -->🎨 样式" },
     { message = "^test", group = "<!-- 6 -->🧪 测试" },
     { message = "^chore\\(deps\\)", group = "📦 依赖更新" },
     { message = "^chore", group = "<!-- 8 -->🔧 日常维护" },
     { message = "^ci", group = "<!-- 7 -->⚙️ 持续集成" },
+    { message = "^init", group = "<!-- 11 -->🎊 初始化" },
+    { message = "^patch", group = "<!-- 1 -->🐛 Bug修复" },
+    { message = "^file", group = "<!-- 12 -->📦 文件变更" },
+    { message = "^publish", group = "<!-- 13 -->🚀 发布" },
+    { message = "^tag", group = "<!-- 13 -->🚀 发布" },
+    { message = "^config", group = "<!-- 8 -->🔧 日常维护" },
+    { message = "^git", group = "<!-- 8 -->🔧 日常维护" },
     { body = ".*security", group = "<!-- 9 -->🔒 安全" },
     { message = "^revert", group = "<!-- 10 -->◀️ 撤销" },
 ]
