--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -144,7 +144,10 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: SweetSmellFox/MFAAvalonia
-          ref: ${{ steps.get_mfa_tag.outputs.tag }}
+          # 使用获取到的最新正式版 tag
+          # ref: ${{ steps.get_mfa_tag.outputs.tag }}
+          # 使用固定版本
+          ref: v2.1.7
           path: MFA-src
           fetch-depth: 1
 
