config🔧: 在CI 中固定 maafw 版本为 5.2.0

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -110,7 +110,10 @@ jobs:
         with:
           repository: MaaXYZ/MaaFramework
           fileName: "MAA-${{ matrix.platform }}-${{ matrix.arch }}*"
-          latest: true
+          # 下载最新的 Release
+          # latest: true
+          # 下载指定的 Release Tag
+          tag: v5.2.0
           out-file-path: "deps"
           extract: true
 
