--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -110,7 +110,10 @@ jobs:
         with:
           repository: MaaXYZ/MaaFramework
           fileName: "MAA-${{ matrix.platform }}-${{ matrix.arch }}*"
-          latest: true
+          # 下载最新的 Release
+          # latest: true
+          # 下载指定的 Release Tag
+          tag: v5.2.0
           out-file-path: "deps"
           extract: true
 
@@ -144,7 +147,10 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: SweetSmellFox/MFAAvalonia
-          ref: ${{ steps.get_mfa_tag.outputs.tag }}
+          # 使用获取到的最新正式版 tag
+          # ref: ${{ steps.get_mfa_tag.outputs.tag }}
+          # 使用固定版本
+          ref: v2.1.8
           path: MFA-src
           fetch-depth: 1
 
